@@ -19,6 +19,20 @@ jimport('joomla.plugin.plugin');
 class plgContentVote extends JPlugin
 {
 	/**
+	 * Constructor
+	 *
+	 * @access      protected
+	 * @param       object  $subject The object to observe
+	 * @param       array   $config  An array that holds the plugin configuration
+	 * @since       1.5
+	 */
+	public function __construct(& $subject, $config)
+	{
+		parent::__construct($subject, $config);
+		$this->loadLanguage();
+	}
+
+	/**
 	* @since	1.6
 	*/
 	public function onContentBeforeDisplay($context, &$row, &$params, $page=0)
