@@ -21,6 +21,20 @@ jimport('joomla.plugin.plugin');
 class plgSearchNewsfeeds extends JPlugin
 {
 	/**
+	 * Constructor
+	 *
+	 * @access      protected
+	 * @param       object  $subject The object to observe
+	 * @param       array   $config  An array that holds the plugin configuration
+	 * @since       1.5
+	 */
+	public function __construct(& $subject, $config)
+	{
+		parent::__construct($subject, $config);
+		$this->loadLanguage();
+	}
+
+	/**
 	 * @return array An array of search areas
 	 */
 	function onContentSearchAreas()
