@@ -22,6 +22,20 @@ jimport('joomla.plugins.plugin');
  */
 class plgUserContactCreator extends JPlugin
 {
+	/**
+	 * Constructor
+	 *
+	 * @access      protected
+	 * @param       object  $subject The object to observe
+	 * @param       array   $config  An array that holds the plugin configuration
+	 * @since       1.5
+	 */
+	public function __construct(& $subject, $config)
+	{
+		parent::__construct($subject, $config);
+		$this->loadLanguage();
+	}
+
 	function onUserAfterSave($user, $isnew, $success, $msg)
 	{
 		if(!$success) {
